--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@200..800&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" href="images/favicon.svg" type="image" />
+
 </head>
 <body>
     <img src="images/img1.png" alt="Desenho de pessoa ao lado de um globo"/>
@@ -29,5 +31,6 @@
         <a href=""><strong>Ofertas</strong></a>
         <a href=""><strong>Contato</strong></a>
     </div>
+    <img id="wave" src="images/wave.png" alt="Imagem ondulante azul."
 </body>
 </html>
